--- a/src/style/_variavles.scss
+++ b/src/style/_variavles.scss
@@ -2,7 +2,7 @@ html[data-theme="dark"] {
     // Color
     --white: #fff;
     --primary-color: #1f1d2a;
-    --font-primay: #ffffff;
+    --font-primary: #ffffff;
     --mainAccentColor: #0ebe78;
     --mainAccentColor-hover: #10744c;
     --mainAccentColor-active: #0b4e33;
@@ -26,8 +26,8 @@ html[data-theme="light"] {
     // Color
     --white: #ffffff;
     --primary-color: #ffffff;
-    --font-primay: #181717;
-    --mainAccentColor: #1e1291;
+    --font-primary: #181717;
+    --mainAccentColor: #0062d1;
     --mainAccentColor-hover: #102774;
     --mainAccentColor-active: #09194d;
     --additionalAccentColor: #0ebe78;
