--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,7 +13,10 @@ header {
     cursor: pointer;
     color: var(--font-primary);
     transition: color 0.3s ease-in-out;
-    &:hover {
+    & h2 {
+        transition: color 0.3s ease-in-out;
+    }
+    &:hover h2 {
         color: var(--mainAccentColor);
         & span {
             color: var(--font-primary);
@@ -29,7 +32,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     gap: 0 10px;
-    & li {
+    & li a {
         font-size: 1.24rem;
         transition: color 0.3s ease-in-out;
         cursor: pointer;
