--- a/src/style/_variavles.scss
+++ b/src/style/_variavles.scss
@@ -1,12 +1,12 @@
 html[data-theme="dark"] {
     // Color
     --white: #fff;
-    --primary-color: #1f1d2a;
+    --primary-color: #1b1b1d;
     --font-primary: #ffffff;
     --mainAccentColor: #0ebe78;
     --mainAccentColor-hover: #10744c;
     --mainAccentColor-active: #0b4e33;
-    --additionalAccentColor: #1e1291;
+    --additionalAccentColor: #3f3e3e;
     --hover-btn-color: #e02d05;
     --linear-gradient-bg1: #5d77ff;
     --linear-gradient-bg2: #6539c1;
@@ -25,12 +25,12 @@ html[data-theme="dark"] {
 html[data-theme="light"] {
     // Color
     --white: #ffffff;
-    --primary-color: #ffffff;
+    --primary-color: #e9e9e9;
     --font-primary: #181717;
     --mainAccentColor: #0062d1;
     --mainAccentColor-hover: #102774;
     --mainAccentColor-active: #09194d;
-    --additionalAccentColor: #0ebe78;
+    --additionalAccentColor: #ffffff;
     --hover-btn-color: #b8e005;
     --linear-gradient-bg1: #ff14ff;
     --linear-gradient-bg2: #8a1c8a;
