--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -37,7 +37,7 @@ html[data-theme="light"] {
 
     // Fonts
 
-    --main-font-family: "Nunito", sans-serif;
+    --main-font-family: "Roboto", sans-serif;
 
     --font-size: 16px;
 
