add icon theme btn

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -7,7 +7,7 @@ html[data-theme="dark"] {
     --mainAccentColor-hover: #10744c;
     --mainAccentColor-active: #0b4e33;
     --additionalAccentColor: #3f3e3e;
-    --hover-btn-color: #e02d05;
+    --hover-btn-theme: #747474;;
     --linear-gradient-bg1: #5d77ff;
     --linear-gradient-bg2: #6539c1;
 
@@ -31,7 +31,7 @@ html[data-theme="light"] {
     --mainAccentColor-hover: #102774;
     --mainAccentColor-active: #09194d;
     --additionalAccentColor: #ffffff;
-    --hover-btn-color: #b8e005;
+    --hover-btn-theme: #cdcecf;
     --linear-gradient-bg1: #ff14ff;
     --linear-gradient-bg2: #8a1c8a;
 
