--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -30,6 +30,14 @@ header {
     }
 }
 
+.name {
+    cursor: pointer;
+    transition: color 0.3s ease-in-out;
+    &:hover {
+        color: var(--mainAccentColor);
+    }
+}
+
 .nav ul {
     display: flex;
     flex-wrap: wrap;
