--- a/src/components/UI/Input/Input.module.scss
+++ b/src/components/UI/Input/Input.module.scss
@@ -21,7 +21,7 @@
         background-color: var(--primary-color);
         width: 100%;
         height: 100%;
-        color: #000;
+        color: var(--font-primary);
         font-family: "Fira Sans";
         font-weight: 400;
         font-size: 15px;
@@ -29,7 +29,6 @@
         padding-left: 26px;
         letter-spacing: 0.009em;
 
-        color: #000000;
         padding-top: 20px;
         border: none;
         outline: none;
