--- a/src/style/Page/Home.module.scss
+++ b/src/style/Page/Home.module.scss
@@ -20,6 +20,7 @@
 
 .inbox {
     margin-top: 50px;
+    padding: 0 30px;
     display: flex;
     border-radius: 4px;
     gap: 0 30px;
@@ -33,6 +34,7 @@ aside {
     background-color: var(--additionalAccentColor);
     width: 20%;
     & ul {
+        cursor: pointer;
         height: 690px;
         overflow: scroll;
         overflow-x: hidden;
@@ -61,17 +63,136 @@ main {
     grid-auto-rows: 1fr;
     grid-template-columns: 1fr;
     grid-template-rows: 85% 15%;
-    padding: 10px;
     border-radius: 15px;
     background-color: var(--additionalAccentColor);
     width: 80%;
     gap: 20px 0;
 }
 
-.messages_wrap {
+.message_inner {
+    overflow: scroll;
+    overflow-x: hidden;
+    height: calc(100% - 30px);
+    border-bottom: 1px solid var(--hover-btn-theme);
+    scrollbar-width: none; /*mozilla*/
+    &::-webkit-scrollbar {
+        display: none; /*chrome*/
+    }
+}
+
+.mesage_header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+    border-bottom: 1px solid var(--hover-btn-theme);
+    & .message_user {
+        display: flex;
+        align-items: center;
+        gap: 0 10px;
+        & img {
+            border-radius: 50%;
+        }
+    }
+}
+
+.message_dropdown {
+    &:hover .message_dropdown-content {
+        display: block;
+    }
+    position: relative;
+    display: inline-block;
+    &_content {
+        border: 1px solid var(--hover-btn-theme);
+        border-radius: 15px;
+        display: none;
+        position: absolute;
+        top: 105%;
+        right: 0;
+        background-color: var(--additionalAccentColor);
+
+        min-width: 170px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+        & a {
+            color: var(--font-primary);
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+    }
+}
+
+.message_dropdown:hover .message_dropdown_content {
+    display: block;
+}
+
+.dropBtn {
+    opacity: 0.7;
+    width: 35px;
+    cursor: pointer;
+    &:hover {
+        opacity: 1;
+    }
+}
+
+.chat_bubble {
+    padding: 10px 14px;
+    margin: 10px 30px;
+    border-radius: 9px;
+    position: relative;
+    color: var(--font-primary);
+    &:after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        width: 0;
+        height: 0;
+        border: 20px solid transparent;
+        border-bottom: 0;
+        margin-top: -10px;
+    }
+
+    &__left {
+        background: var(--hover-btn-theme);
+
+        &:after {
+            left: 0;
+            border-right-color: var(--hover-btn-theme);
+            border-left: 0;
+            margin-left: -20px;
+        }
+    }
+
+    &__right {
+        background: var(--mainAccentColor);
+        color: #fff;
+        &:after {
+            right: 0;
+            border-left-color: var(--mainAccentColor);
+            border-right: 0;
+            margin-right: -20px;
+        }
+    }
+}
+
+.no_gutters {
+    margin-right: 0;
+    margin-left: 0;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+}
+
+.row:has(.chat_bubble__left) {
+    justify-content: flex-start;
 }
 
 .messges_input {
+    padding: 10px;
     & div {
         border-radius: 15px;
     }
