--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -51,3 +51,21 @@ header {
         }
     }
 }
+
+.user {
+    cursor: pointer;
+    padding: 7px 20px;
+    display: flex;
+    align-items: center;
+    gap: 0 15px;
+    transition: background-color 0.3s ease-in-out;
+    & img {
+        width: 45px;
+        height: 45px;
+        object-fit: cover;
+        border-radius: 50%;
+    }
+    &:hover {
+        background-color: var(--hover-btn-theme);
+    }
+}
