--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -69,3 +69,46 @@ header {
         background-color: var(--hover-btn-theme);
     }
 }
+
+.message_dropdown {
+    position: relative;
+    display: inline-block;
+    &_content {
+        border: 1px solid var(--hover-btn-theme);
+        border-radius: 0 0 15px 15px;
+        position: absolute;
+        right: 0;
+        background-color: var(--additionalAccentColor);
+
+        min-width: 150px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+        & a {
+            cursor: pointer;
+            gap: 0 10px;
+            display: flex;
+            align-items: center;
+            color: var(--font-primary);
+            padding: 12px 16px;
+            text-decoration: none;
+            &:hover {
+                background-color: var(--hover-btn-theme);
+            }
+            & svg path {
+                display: block;
+                flex-direction: row;
+                fill: var(--mainAccentColor);
+                stroke: var(--mainAccentColor);
+            }
+        }
+    }
+}
+
+.dropBtn {
+    opacity: 0.7;
+    width: 35px;
+    cursor: pointer;
+    &:hover {
+        opacity: 1;
+    }
+}
