--- a/src/style/Page/Home.module.scss
+++ b/src/style/Page/Home.module.scss
@@ -115,6 +115,9 @@ main {
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         z-index: 1;
         & a {
+            &:hover {
+                background-color: var(--hover-btn-theme);
+            }
             color: var(--font-primary);
             padding: 12px 16px;
             text-decoration: none;
