--- a/src/style/Page/Profile.module.scss
+++ b/src/style/Page/Profile.module.scss
@@ -19,6 +19,9 @@
     flex-direction: column;
     align-items: center;
     gap: 20px 0;
+    & div {
+        border-radius: 15px;
+    }
 }
 
 .drop_area {
