fix Header | add Private Route | add Loading

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -73,6 +73,9 @@ header {
 .message_dropdown {
     position: relative;
     display: inline-block;
+    &.active {
+        background-color: var(--hover-btn-theme);
+    }
     &_content {
         overflow: hidden;
         border: 1px solid var(--hover-btn-theme);
