--- a/src/style/Page/Home.module.scss
+++ b/src/style/Page/Home.module.scss
@@ -115,6 +115,12 @@ main {
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         z-index: 1;
         & a {
+            &:first-child {
+                border-radius: 15px 15px 0 0;
+            }
+            &:last-child {
+                border-radius: 0 0 15px 15px;
+            }
             &:hover {
                 background-color: var(--hover-btn-theme);
             }
