fix | changed the structure redux | fix toast | deleted any ts | add Skeleton | add Route Guard

--- a/src/components/Toast/Toast.module.scss
+++ b/src/components/Toast/Toast.module.scss
@@ -1,127 +1,145 @@
 .container {
-    font-size: 14px;
-    position: fixed;
-    z-index: 10;
-  }
+  position: fixed;
+  z-index: 10;
+}
 
-  .bottom-right {
-    bottom: 1rem;
-    right: 1rem;
-    animation: toast-in-right .7s;
-    animation-name: toast-in-right, leave-from-right;
-    animation-timing-function: linear, linear;
-    animation-fill-mode: forwards;
-    animation-duration: .7s, .7s;
-    animation-delay: 0s, 3.1s;
-  }
+.container:has(.top-right) {
+  top: 1rem;
+  right: 1rem;
+}
 
-  .bottom-left {
-    bottom: 1rem;
-    left: 1rem;
-    animation-name: toast-in-left, leave-from-left;
-    animation-timing-function: linear, linear;
-    animation-fill-mode: forwards;
-    animation-duration: .7s, .7s;
-    animation-delay: 0s, 3.1s;
-  }
+.container:has(.bottom-right) {
+  bottom: 1rem;
+  right: 1rem;
+}
 
-  .top-right {
-    top: 1rem;
-    right: 1rem;
-    animation-name: toast-in-right, leave-from-right;
-    animation-timing-function: linear, linear;
-    animation-fill-mode: forwards;
-    animation-duration: .7s, .7s;
-    animation-delay: 0s, 3.1s;
-  }
+.container:has(.bottom-left) {
+  bottom: 1rem;
+  left: 1rem;
+}
 
-  .top-left {
-    top: 1rem;
-    left: 1rem;
-    animation-name: toast-in-left, leave-from-left;
-    animation-timing-function: linear, linear;
-    animation-fill-mode: forwards;
-    animation-duration: .7s, .7s;
-    animation-delay: 0s, 3.1s;
-  }
+.container:has(.top-left) {
+  top: 1rem;
+  left: 1rem;
+}
 
-  .notification {
-    margin-bottom: 1rem;
-    border-radius: 4px;
-    box-shadow: 0 0 10px #999;
-    color: #000;
-    opacity: 0.9;
-    transition: .3s ease;
-  }
+.bottom-right {
+  bottom: 1rem;
+  right: 1rem;
+  animation-name: toast-in-right, leave-from-right;
+  animation-timing-function: linear, linear;
+  animation-fill-mode: forwards;
+  animation-duration: 0.3s, 0.3s;
+  animation-delay: 0s, 3s;
+}
 
-  .notification:hover {
-    box-shadow: 0 0 12px #fff;
-    opacity: 1;
-  }
+.bottom-left {
+  bottom: 1rem;
+  left: 1rem;
+  animation-name: toast-in-left, leave-from-left;
+  animation-timing-function: linear, linear;
+  animation-fill-mode: forwards;
+  animation-duration: 0.3s, 0.3s;
+  animation-delay: 0s, 3s;
+}
 
-  .toast {
-    cursor: pointer;
-    width: 365px;
-    color: #fff;
-    padding: 20px 15px 10px 10px;
-  }
+.top-right {
+  top: 1rem;
+  right: 1rem;
+  animation-name: toast-in-right, leave-from-right;
+  animation-timing-function: linear, linear;
+  animation-fill-mode: forwards;
+  animation-duration: 0.3s, 0.3s;
+  animation-delay: 0s, 3s;
+}
 
-  .container button {
-    float: right;
-    background: none;
-    border: none;
-    color: #fff;
-    opacity: 0.8;
-    cursor: pointer;
-  }
+.top-left {
+  top: 1rem;
+  left: 1rem;
+  animation-name: toast-in-left, leave-from-left;
+  animation-timing-function: linear, linear;
+  animation-fill-mode: forwards;
+  animation-duration: 0.3s, 0.3s;
+  animation-delay: 0s, 3s;
+}
 
-  .title {
-    font-weight: 700;
-    font-size: 16px;
-    text-align: left;
-    margin-top: 0;
-    margin-bottom: 6px;
-    width: 300px;
-    height: 18px;
-  }
+.notification {
+  margin-bottom: 1rem;
+  border-radius: 4px;
+  box-shadow: 0 0 10px #999;
+  color: #000;
+  opacity: 0.9;
+  transition: 0.3s ease;
+}
 
-  .description {
-    margin: 0;
-    text-align: left;
-  }
+.notification:hover {
+  box-shadow: 0 0 12px #fff;
+  opacity: 1;
+}
 
-  @keyframes toast-in-right {
-    from {
-      transform: translateX(100%);
-    }
-    to {
-      transform: translateX(-100%);
-    }
-  }
+.toast {
+  cursor: pointer;
+  width: 365px;
+  color: #fff;
+  padding: 20px 15px 10px 10px;
+}
 
-  @keyframes leave-from-right {
-    from {
-      transform: translateX(-100%);
-    }
-    to {
-      transform: translateX(100%);
-    }
-  }
+.container button {
+  float: right;
+  background: none;
+  border: none;
+  color: #fff;
+  opacity: 0.8;
+  cursor: pointer;
+}
 
-  @keyframes leave-from-left {
-    from {
-      transform: translateX(100%);
-    }
-    to {
-      transform: translateX(-100%);
-    }
-  }
+.title {
+  font-weight: 700;
+  font-size: 16px;
+  text-align: left;
+  margin-top: 0;
+  margin-bottom: 6px;
+  width: 300px;
+  height: 18px;
+}
 
-  @keyframes toast-in-left {
-    from {
-      transform: translateX(-100%);
-    }
-    to {
-      transform: translateX(100%);
-    }
+.description {
+  margin: 0;
+  text-align: left;
+}
+
+@keyframes toast-in-right {
+  from {
+    transform: translateX(110%);
   }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes leave-from-right {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(110%);
+  }
+}
+
+@keyframes leave-from-left {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-110%);
+  }
+}
+
+@keyframes toast-in-left {
+  from {
+    transform: translateX(-110%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
