--- a/src/style/Page/Home.module.scss
+++ b/src/style/Page/Home.module.scss
@@ -52,6 +52,8 @@ aside {
             background-color: var(--hover-btn-theme);
         }
         & img {
+            width: 45px;
+            height: 45px;
             border-radius: 50%;
         }
     }
