--- a/src/components/ChatContainer/ChatContainer.module.scss
+++ b/src/components/ChatContainer/ChatContainer.module.scss
@@ -1,74 +1,15 @@
-.form {
-    border-radius: 15px;
-    margin: 100px auto;
-    background-color: var(--additionalAccentColor);
-    max-width: 500px;
-    padding: 20px;
+.welcome {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
     flex-direction: column;
-    gap: 20px 0;
-}
-
-.inputs div {
-    border-radius: 15px;
-    margin-bottom: 10px;
-}
-
-.title {
-    text-align: center;
-}
-
-.inbox {
-    margin-top: 50px;
-    padding: 0 30px;
-    display: flex;
-    border-radius: 4px;
-    gap: 0 30px;
-    height: calc(100vh - 250px);
-}
-
-aside {
-    overflow: hidden;
-    height: 100%;
-    border-radius: 15px;
-    background-color: var(--additionalAccentColor);
-    width: 20%;
-    & ul {
-        height: 690px;
-        overflow: scroll;
-        overflow-x: hidden;
-        scrollbar-width: none; /*mozilla*/
+    img {
+        height: 20rem;
     }
-    ::-webkit-scrollbar {
-        display: none; /*chrome*/
+    span {
+        color: var(--mainAccentColor);
     }
-    ul li {
-        cursor: pointer;
-        padding: 15px;
-        display: flex;
-        align-items: center;
-        gap: 0 10px;
-        &:hover {
-            background-color: var(--hover-btn-theme);
-        }
-        & img {
-            width: 45px;
-            height: 45px;
-            border-radius: 50%;
-        }
-    }
-}
-
-main {
-    display: grid;
-    grid-auto-columns: 1fr;
-    grid-auto-rows: 1fr;
-    grid-template-columns: 1fr;
-    grid-template-rows: 85% 15%;
-    border-radius: 15px;
-    background-color: var(--additionalAccentColor);
-    width: 80%;
-    gap: 20px 0;
 }
 
 .message_inner {
