--- a/src/components/ChatContainer/ChatContainer.module.scss
+++ b/src/components/ChatContainer/ChatContainer.module.scss
@@ -1,4 +1,5 @@
 .welcome {
+    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,9 +14,10 @@
 }
 
 .message_inner {
+    padding-top: 10px;
     overflow: scroll;
     overflow-x: hidden;
-    height: calc(100% - 30px);
+    height: calc(100% - 60px);
     border-bottom: 1px solid var(--hover-btn-theme);
     scrollbar-width: none; /*mozilla*/
     &::-webkit-scrollbar {
@@ -90,14 +92,14 @@
 
 .chat_bubble {
     padding: 10px 14px;
-    margin: 10px 30px;
+    margin: 5px 20px;
     border-radius: 9px;
     position: relative;
     color: var(--font-primary);
     &:after {
         content: "";
         position: absolute;
-        top: 50%;
+        top: 74%;
         width: 0;
         height: 0;
         border: 20px solid transparent;
@@ -109,7 +111,7 @@
         background: var(--hover-btn-theme);
 
         &:after {
-            left: 0;
+            left: 8px;
             border-right-color: var(--hover-btn-theme);
             border-left: 0;
             margin-left: -20px;
@@ -120,7 +122,7 @@
         background: var(--mainAccentColor);
         color: #fff;
         &:after {
-            right: 0;
+            right: 8px;
             border-left-color: var(--mainAccentColor);
             border-right: 0;
             margin-right: -20px;
