--- a/src/style/Page/Home.module.scss
+++ b/src/style/Page/Home.module.scss
@@ -25,9 +25,17 @@
     border-radius: 4px;
     gap: 0 30px;
     height: calc(100vh - 250px);
+    @media (max-width: 768px) {
+        height: calc(100vh - 150px);
+        flex-direction: column;
+        gap: 10px 0;
+        margin-top: 10px;
+        padding: 0;
+    }
 }
 
 aside {
+    min-width: 200px;
     overflow: hidden;
     height: 100%;
     border-radius: 15px;
@@ -57,6 +65,11 @@ aside {
             border-radius: 50%;
         }
     }
+    @media (max-width: 768px) {
+        width: 100%;
+        min-height: 75px;
+        height: 75px;
+    }
 }
 
 main {
@@ -64,11 +77,14 @@ main {
     grid-auto-columns: 1fr;
     grid-auto-rows: 1fr;
     grid-template-columns: 1fr;
-    grid-template-rows: 85% 15%;
+    grid-template-rows: auto 75px;
     border-radius: 15px;
     background-color: var(--additionalAccentColor);
     width: 80%;
-    gap: 20px 0;
+    @media (max-width: 768px) {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .message_inner {
