--- a/src/style/Page/Home.module.scss
+++ b/src/style/Page/Home.module.scss
@@ -26,7 +26,6 @@
     gap: 0 30px;
     height: calc(100vh - 250px);
     @media (max-width: 768px) {
-        height: calc(100vh - 150px);
         flex-direction: column;
         gap: 10px 0;
         margin-top: 10px;
@@ -74,10 +73,7 @@
 
 main {
     display: grid;
-    grid-auto-columns: 1fr;
-    grid-auto-rows: 1fr;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 75px;
+    grid-template-rows: calc(100% - 75px) 75px;
     border-radius: 15px;
     background-color: var(--additionalAccentColor);
     width: 80%;
