--- a/src/components/ChatContainer/ChatContainer.module.scss
+++ b/src/components/ChatContainer/ChatContainer.module.scss
@@ -14,7 +14,7 @@
 }
 
 .message_inner {
-    padding-top: 10px;
+    padding: 10px 0 10px 0;
     overflow: scroll;
     overflow-x: hidden;
     height: calc(100% - 60px);
@@ -184,13 +184,12 @@
             width: 5px;
         }
         & div:nth-child(1) {
-
         }
         & div:nth-child(2) {
             & ul li {
                 & div:nth-child(1) {
                     background-color: var(--additionalAccentColor);
-                    color: var(--font-primary)
+                    color: var(--font-primary);
                 }
             }
         }
