--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -12,6 +12,7 @@ html[data-theme="dark"] {
     --linear-gradient-bg2: #6539c1;
     --skeleton-bg: #a3a3a3;
     --skeleton-fc: #c3c1c1;
+    --status-user: #4bb34b;
 
     // Fonts
 
@@ -46,6 +47,7 @@ html[data-theme="light"] {
     --linear-gradient-bg2: #8a1c8a;
     --skeleton-bg: #d9d9d9;
     --skeleton-fc: #ededed;
+    --status-user: #4bb34b;
 
     // Fonts
 
