--- a/src/components/ChatContainer/ChatContainer.module.scss
+++ b/src/components/ChatContainer/ChatContainer.module.scss
@@ -16,7 +16,6 @@
 .message_inner {
     padding: 10px 0 10px 0;
     overflow: scroll;
-    overflow-x: hidden;
     height: calc(100% - 60px);
     border-bottom: 1px solid var(--hover-btn-theme);
     scrollbar-width: none; /*mozilla*/
@@ -52,14 +51,20 @@
         border-radius: 15px;
         display: none;
         position: absolute;
-        top: 105%;
+        top: 100%;
         right: 0;
         background-color: var(--additionalAccentColor);
 
-        min-width: 170px;
+        min-width: 235px;
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         z-index: 1;
-        & a {
+        & span {
+            display: flex;
+            align-items: center;
+            &:has(svg) {
+                justify-content: space-around;
+            }
+            cursor: pointer;
             &:first-child {
                 border-radius: 15px 15px 0 0;
             }
@@ -70,9 +75,8 @@
                 background-color: var(--hover-btn-theme);
             }
             color: var(--font-primary);
-            padding: 12px 16px;
+            padding: 10px;
             text-decoration: none;
-            display: block;
         }
     }
 }
@@ -108,6 +112,7 @@
     }
 
     &__left {
+        margin: 5px 5px 5px 20px;
         background: var(--hover-btn-theme);
 
         &:after {
@@ -119,6 +124,7 @@
     }
 
     &__right {
+        margin: 5px 20px 5px 5px;
         background: var(--mainAccentColor);
         color: #fff;
         &:after {
@@ -139,6 +145,24 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
+    svg path {
+        display: none;
+        fill: var(--font-primary);
+    }
+}
+
+.row:has(svg) {
+    cursor: pointer;
+}
+
+.row:hover svg path {
+    display: block;
+}
+
+.row:has(.chat_bubble__right) {
+    & svg {
+        transform: scaleX(-1);
+    }
 }
 
 .row:has(.chat_bubble__left) {
@@ -196,7 +220,3 @@
         }
     }
 }
-
-// .messges_emoji:hover aside {
-//     display: flex !important;
-// }
