add route Friends | Search | add Request friends | other fix

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,6 +1,6 @@
 .footer {
     background-color: var(--additionalAccentColor);
-    position: absolute;
+    position: fixed;
     height: 60px;
     bottom: 0;
     width: 100%;
