--- a/src/style/Page/Friends.module.scss
+++ b/src/style/Page/Friends.module.scss
@@ -162,8 +162,20 @@
     width: 100%;
     padding: 0 20px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     gap: 0 10px;
+    & div {
+        display: flex;
+        align-items: center;
+        gap: 0 10px;
+    }
+    & button {
+        padding: 0.375rem 0;
+        max-width: 120px;
+        white-space: normal;
+        border-radius: 15px;
+    }
     & img {
         width: 80px;
         height: 80px;
