--- a/src/style/Page/Search.module.scss
+++ b/src/style/Page/Search.module.scss
@@ -67,7 +67,13 @@
     & div {
         display: flex;
         align-items: center;
+        justify-content: center;
         gap: 0 10px;
+        & div {
+            font-size: 2rem;
+            width: 80px;
+            height: 80px;
+        }
     }
     & button {
         padding: 0.375rem 0;
