--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -5,6 +5,7 @@ html[data-theme="dark"] {
     --font-primary: #ffffff;
     --mainAccentColor: #0ebe78;
     --mainAccentColor-hover: #10744c;
+    --mainAccentColor-voice: #0fa33b;
     --mainAccentColor-active: #0b4e33;
     --additionalAccentColor: #3f3e3e;
     --hover-btn-theme: #616161;
@@ -39,6 +40,7 @@ html[data-theme="light"] {
     --primary-color: #e9e9e9;
     --font-primary: #181717;
     --mainAccentColor: #0062d1;
+    --mainAccentColor-voice: #418fff;
     --mainAccentColor-hover: #102774;
     --mainAccentColor-active: #09194d;
     --additionalAccentColor: #ffffff;
