--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -44,7 +44,7 @@ html[data-theme="light"] {
     --mainAccentColor-hover: #102774;
     --mainAccentColor-active: #09194d;
     --additionalAccentColor: #ffffff;
-    --hover-btn-theme: #aeb7c21f;
+    --hover-btn-theme: #eeeeee;
     --linear-gradient-bg1: #ff14ff;
     --linear-gradient-bg2: #8a1c8a;
     --skeleton-bg: #d9d9d9;
