--- a/src/components/ChatContainer/ChatContainer.module.scss
+++ b/src/components/ChatContainer/ChatContainer.module.scss
@@ -96,6 +96,7 @@
 }
 
 .chat_bubble {
+    max-width: 550px;
     padding: 10px 14px;
     margin: 5px 20px;
     border-radius: 9px;
@@ -113,7 +114,7 @@
     }
 
     &__left {
-        min-width: 100px;
+        min-width: 69px;
         margin: 16px 5px 8px 20px;
         background: var(--hover-btn-theme);
         z-index: 1;
@@ -135,7 +136,7 @@
     }
 
     &__right {
-        min-width: 100px;
+        min-width: 69px;
         margin: 16px 20px 8px 5px;
         background: var(--mainAccentColor);
         color: #fff;
@@ -285,14 +286,13 @@ main:has(.mesg_editing) {
     position: absolute;
     color: var(--font-primary);
     font-size: 0.6rem;
-    top: -35%;
-    right: 0;
+    top: -15px;
+    right: -15px;
 }
 
 .edit {
     position: absolute;
     color: var(--font-primary);
-    top: 50%;
     transform: translateY(-50%);
     &__left {
         right: -45px;
@@ -405,6 +405,146 @@ main:has(.mesg_editing) {
         background-color: var(--mainAccentColor-voice);
         height: 100%;
         transition: width 0.3s linear;
+    }
+}
+
+.files {
+    width: 100%;
+    max-width: 350px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 0 10px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1px 1px;
+    & .file {
+        overflow: hidden;
+        position: relative;
+        max-width: 350px;
+        max-height: 350px;
+        background-color: var(--hover-btn-theme);
+        & img {
+            width: 100%;
+            height: 100%;
+            max-width: 350px;
+            max-height: 350px;
+            transition: filter 0.3s ease;
+            object-fit: cover;
+        }
+        &:hover {
+            & img {
+                filter: brightness(70%);
+            }
+        }
+        &:first-child:nth-last-child(1) {
+            width: 100%;
+        }
+        &:first-child:nth-last-child(2),
+        &:first-child:nth-last-child(2) ~ .file {
+            &:nth-child(n + 1) {
+                max-width: 164px;
+                max-height: 350px;
+            }
+        }
+        &:first-child:nth-last-child(3),
+        &:first-child:nth-last-child(3) ~ .file {
+            &:first-child {
+                max-width: 350px;
+                max-height: 350px;
+            }
+            &:nth-child(n + 2) {
+                max-width: 164px;
+                max-height: 350px;
+            }
+        }
+        &:first-child:nth-last-child(4),
+        &:first-child:nth-last-child(4) ~ .file {
+            &:first-child {
+                max-width: 350px;
+                max-height: 350px;
+            }
+            &:nth-child(n + 2) {
+                max-width: 109px;
+                max-height: 350px;
+            }
+        }
+        &:first-child:nth-last-child(5),
+        &:first-child:nth-last-child(5) ~ .file {
+            &:first-child {
+                max-width: 327px;
+                max-height: 350px;
+            }
+            &:nth-child(n + 2) {
+                max-width: 81px;
+                max-height: 350px;
+            }
+        }
+        &:first-child:nth-last-child(6),
+        &:first-child:nth-last-child(6) ~ .file {
+            &:nth-child(n + 1) {
+                max-width: 164px;
+                max-height: 350px;
+            }
+        }
+        &:first-child:nth-last-child(7),
+        &:first-child:nth-last-child(7) ~ .file {
+            &:nth-child(n + 1) {
+                max-width: 164px;
+                max-height: 350px;
+            }
+        }
+        &:first-child:nth-last-child(7),
+        &:first-child:nth-last-child(7) ~ .file {
+            &:nth-child(n + 1) {
+                max-width: 164px;
+                max-height: 350px;
+            }
+            &:nth-child(n + 5) {
+                max-width: 109px;
+                max-height: 350px;
+            }
+        }
+        &:first-child:nth-last-child(8),
+        &:first-child:nth-last-child(8) ~ .file {
+            &:nth-child(n + 1) {
+                max-width: 323px;
+                max-height: 350px;
+            }
+            &:nth-child(n + 2) {
+                max-width: 107px;
+                max-height: 350px;
+            }
+            &:nth-child(n + 5) {
+                max-width: 80px;
+                max-height: 350px;
+            }
+        }
+        &:first-child:nth-last-child(9),
+        &:first-child:nth-last-child(9) ~ .file {
+            &:nth-child(n + 1) {
+                max-width: 323px;
+                max-height: 350px;
+            }
+            &:nth-child(n + 2) {
+                max-width: 80px;
+                max-height: 350px;
+            }
+        }
+        &:first-child:nth-last-child(10),
+        &:first-child:nth-last-child(10) ~ .file {
+            &:nth-child(n + 1) {
+                max-width: 319px;
+                max-height: 350px;
+            }
+            &:nth-child(n + 2) {
+                max-width: 79px;
+                max-height: 350px;
+            }
+            &:nth-child(n + 6) {
+                max-width: 63px;
+                max-height: 350px;
+            }
+        }
     }
 }
 
